--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
 <resources>
 
     <string name="app_name">FoodMe</string>
-    <string name="order_menu_introduction">Please choose menu</string>
+    <string name="order_menu_introduction">Please choose menu item</string>
     <string name="action_settings">Settings</string>
     <string name="order_site_introduction">Please choose site</string>
     <string name="menu_add_cart_button">Add To Cart</string>
+    <string name="CheckOut">Check Out</string>
 
 </resources>
